[project]
name = "humanml3d"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "ipykernel>=6.16.2",
    "ipython>=7.34.0",
    "matplotlib==3.3.4",
    "numpy>=1.21.6",
    "pandas>=1.1.5",
    "pip>=24.0",
    "scipy>=1.7.3",
    "torch>=1.13.1",
    "tqdm>=4.67.1",
]
